ci: install libmicrovmi from debian package

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -13,47 +13,27 @@ jobs:
     steps:
       - name: install LibVMI dependencies
         run: sudo apt-get install -y libjson-c-dev libxen-dev
-      - name: install stable Rust toolchain
-        uses: actions-rs/toolchain@v1
-        with:
-          profile: minimal
-          toolchain: stable
-          default: true
         
-      - name: clone libmicrovmi
-        uses: actions/checkout@v2
-        with:
-          repository: Wenzel/libmicrovmi
-          path: libmicrovmi
-      - name: build and install libmicrovmi library
+      - name: download microvmi Debian package
         run: |
-          cargo build --features xen
-          sudo cp target/debug/libmicrovmi.so /usr/local/lib
-        working-directory: libmicrovmi
-      - name: install cbindgen
-        uses: actions-rs/cargo@v1
-        with:
-          command: install
-          args: --force cbindgen
-      - name: build and install libmicrovmi header
-        run: |
-          make
-          sudo cp libmicrovmi.h /usr/local/include
-        working-directory: libmicrovmi/c_examples
+          curl -s https://api.github.com/repos/Wenzel/libmicrovmi/releases/latest \
+            | jq -r '.assets[].browser_download_url' \
+            | grep -E '*.deb' \
+            | wget -qi - -O microvmi.deb
+
+      - name: install microvmi
+        run: sudo dpkg -i microvmi.deb
 
       - name: clone LibVMI
         uses: actions/checkout@v2
-      - name: debug
-        run: |
-          pwd
-          ls -l
-          ls -l ..
-          ls -l $GITHUB_WORKSPACE
+
       - name: configure LibVMI
-        run: cmake -B_build -DENABLE_KVM=OFF -DENABLE_BAREFLANK=OFF .
+        run: cmake -B_build -DENABLE_BAREFLANK=OFF .
+
       - name: build LibVMI
         run: make
         working-directory: _build
+
       - name: install LibVMI
         run: sudo make install
         working-directory: _build
